Fix tester, fix moneyhandling to be threadsafe.